# LidarDetection_ros

./: .gitignore  README.md
lidar_detection_msg/: CMakeLists.txt  package.xml
lidar_detection_msg/msg/: Clusters.msg  clus.msg
lidar_detection_ros/: CMakeLists.txt  os1.launch  package.xml  vel.launch
lidar_detection_ros/launch/: lan.launch  os1.launch  velo.launch
lidar_detection_ros/rviz/: os1.rviz  vel.rviz  velo.rviz
lidar_detection_ros/scripts/: Detection.py  NetUtil.py  plisten.py  ptalk.py
lidar_detection_ros/scripts/pointNetX/: model.py
lidar_detection_ros/src/: PCprocess.cpp  VelPCP.cpp  detect.cpp
